--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -3,7 +3,7 @@
     .page-header
       h1 #{title}
       small 电影收藏
-.navbar.navbar-default.navbar-fixed-top
+.navbar.navbar-default.navbar-fixed-bottom
   .container
     .navbar-header
       a.navbar-brand(href="/") 重度科幻迷
